# p2pfl_experiments

./: .gitattributes  .gitignore  pyproject.toml
p2pfl/: pyproject.toml
p2pfl/p2pfl/: node.py  node_state.py  settings.py
p2pfl/p2pfl/commands/: add_model_command.py
p2pfl/p2pfl/communication/commands/weights/: full_model_command.py  init_model_command.py  partial_model_command.py
p2pfl/p2pfl/communication/memory/: memory_client.py
p2pfl/p2pfl/examples/: mnist.py
p2pfl/p2pfl/learning/aggregators/: aggregator.py
p2pfl/p2pfl/learning/dataset/: p2pfl_dataset.py
p2pfl/p2pfl/learning/pytorch/: lightning_dataset.py  lightning_learner.py
p2pfl/p2pfl/learning/pytorch/mnist_examples/: mnistfederated_dm.py
p2pfl/p2pfl/management/: logger.py
p2pfl/p2pfl/stages/base_node/: start_learning_stage.py  vote_train_set_stage.py  wait_agg_models_stage.py
p2pfl_experiments/: .gitignore  README.md  pyproject.toml
p2pfl_experiments/experiments/: fully_connected_17_17.sh  fully_connected_17_17_10models_per_round.sh  fully_connected_17_17_2models_per_round.sh  fully_connected_17_17_5per.sh  fully_connected_18_18.sh  fully_connected_20_20.sh  ring_17_17.sh  ring_17_17_10models_per_round.sh  ring_17_17_2models_per_round.sh  ring_17_17_5per.sh  ring_18_18.sh  ring_20_20.sh  wheel_17_17.sh  wheel_17_17_10models_per_round.sh  wheel_17_17_2models_per_round.sh  wheel_17_17_5per.sh  wheel_18_18.sh  wheel_20_20.sh
p2pfl_experiments/src/entrypoints/: run_bert_p2p_experiment.py  run_bert_single.py  run_bert_vis_single.py  run_mlp_p2p_test.py  run_visualize_results.py
p2pfl_experiments/src/modelling/: bert_lightning.py  bert_zoo.py  nli_data_load.py  nli_pl_wrapper.py  topologies_hardcoded.py
p2pfl_experiments/src/stats/: result_visualization.py
p2pfl_experiments/src/utils/: plotting.py
src/entrypoints/: run_bert_single.py  run_p2pfl_experiment.py  run_single_bert.py
src/modelling/: bert_lightning.py  ernie.py  nli_data_load.py  nli_pl_wrapper.py
