[tool.poetry]
name = "p2pfl-experiments"
version = "0.1.0"
description = ""
authors = ["Carsten Montag <carsten.montag@btc-ag.com>"]
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.scripts]
start_p2p = "src.entrypoints.run_p2pfl_experiment:main"

[tool.poetry.dependencies]
python = "3.9.19"
grpcio = "^1.62.0"
grpcio-tools = "^1.62.0"
matplotlib = "^3.8.3"
psutil = "^5.9.8"
numpy = ">=1.20,<2.0"
torch = "2.2.2"
p2pfl = {path = "../p2pfl", develop = true}
requests = "^2.32.3"
pytorch-lightning = "^1.2.1"
transformers = "^4.44.2"
pandas = "^2.2.2"
torchvision = "^0.17.1"
torchmetrics = "^1.3.1"
ray = {extras = ["train"], version = "^2.35.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
