[tool.poetry]
name = "p2pfl-experiments"
version = "0.1.0"
description = ""
authors = ["Carsten Montag <carsten.montag@btc-ag.com>"]
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.scripts]
run_bert_p2p = "src.entrypoints.run_bert_p2p_experiment:main"
run_bert_single = "src.entrypoints.run_bert_single:main"
run_mlp = "src.entrypoints.run_mlp_p2p_test:main"
visualize_p2p = "src.entrypoints.run_visualize_results:main"
visualize_single = "src.entrypoints.run_bert_vis_single:main"


[tool.poetry.dependencies]
python = "3.9.20"
p2pfl = {path = "../p2pfl", develop = true}
grpcio = "^1.62.0"
grpcio-tools = "^1.62.0"
matplotlib = "^3.8.3"
psutil = "^5.9.8"
numpy = ">=1.20,<2.0"
torch = "2.2.2"
torchvision = "^0.17.1"
torchmetrics = "^1.3.1"
lightning = "^2.4.0"
transformers = "^4.44.2"
pandas = "^2.2.2"
datasets = "2.15.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
